--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "echarts": "^5.5.0",
+    "echarts-gl": "^2.0.9",
     "element-plus": "^2.7.3",
     "less": "^4.2.0",
     "pinia": "^2.1.7",
